# swiss-culture-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  README_EN.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
audit/: audit-meta.json  audit-report.md  profile.json  summary.json  verification-results.json
audit/findings/: ARCH-005-monolith-server.md  ARCH-008-late-imports.md  OBS-001-no-logging.md  SCALE-001-no-connection-pool.md  SCALE-002-sequential-cantons.md  SEC-003-streamable-http-noauth-bind-all.md  SEC-004-xxe-elementtree.md  SEC-005-ssrf-path-slug.md  SEC-006-error-leak.md  SEC-019-html-regex-untrusted.md
audit/raw/: MANIFEST.txt
src/swiss_culture_mcp/: __init__.py  constants.py  http_client.py  models.py  server.py
tests/: conftest.py  test_server.py
tests/fixtures/: README.md  tradition_alphorn.html  tradition_list.html
