[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-culture-mcp"
version = "1.0.0"
description = "MCP Server for Swiss Cultural Heritage Data (BAK) — ISOS, Cultural Prizes, Living Traditions"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hayal Oezkan", email = "hayal.oezkan@zuerich.ch" }]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "swiss-open-data",
    "bak",
    "isos",
    "kulturerbe",
    "switzerland",
    "llm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
swiss-culture-mcp = "swiss_culture_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-culture-mcp"
Repository = "https://github.com/malkreide/swiss-culture-mcp"
"Bug Tracker" = "https://github.com/malkreide/swiss-culture-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_culture_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: Tests, die echte API-Aufrufe machen (mit --run-live ausführen)",
]
